// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterChips component should render - no data 1`] = `
<span
  className="ins-c-chip-filters"
>
  <ChipGroup
    className=""
    collapsedText="\${remaining} more"
    defaultIsOpen={false}
    expandedText="Show Less"
    numChips={Infinity}
    withToolbar={true}
  >
    <ChipGroupToolbarItem
      className="ins-c-chip-group__plain"
      key="group_plain"
    />
  </ChipGroup>
</span>
`;

exports[`FilterChips component should render 1`] = `
<span
  className="ins-c-chip-filters"
>
  <ChipGroup
    className=""
    collapsedText="\${remaining} more"
    defaultIsOpen={false}
    expandedText="Show Less"
    numChips={Infinity}
    withToolbar={true}
  >
    <ChipGroupToolbarItem
      categoryName="Group 1"
      key="group_Group 1"
    >
      <Component
        key="group_Group 1_chip_Chip 1"
        onClick={[Function]}
      >
        Chip 1
      </Component>
      <Component
        key="group_Group 1_chip_Chip 2"
        onClick={[Function]}
      >
        Chip 2
        <Badge
          key="chip_badge_undefined"
        >
          3
        </Badge>
      </Component>
    </ChipGroupToolbarItem>
    <ChipGroupToolbarItem
      className="ins-c-chip-group__plain"
      key="group_plain"
    >
      <Component
        key="group_plain_chip_Chip 3"
        onClick={[Function]}
      >
        Chip 3
      </Component>
      <Component
        key="group_plain_chip_Chip 4"
        onClick={[Function]}
      >
        Chip 4
      </Component>
    </ChipGroupToolbarItem>
  </ChipGroup>
  <Component
    onClick={[Function]}
    variant="link"
  >
    Clear filters
  </Component>
</span>
`;
